# Arch1

./: README.md  abbot.md  uml.dia
source/: .clang-format  .clang-tidy  CMakeLists.txt  input.txt  main.cpp
source/banks_lib/: CMakeLists.txt  OperationHistory.cpp  OperationHistory.hpp  Operations.hpp  types.hpp
source/banks_lib/accounts/: AccountFabric.cpp  AccountFabric.hpp  CreditAccount.cpp  CreditAccount.hpp  DebitAccount.cpp  DebitAccount.hpp  DepositAccount.cpp  DepositAccount.hpp  IAccount.cpp  IAccount.hpp  IAccountImpl.hpp  TrustedAccount.cpp  TrustedAccount.hpp  UntrustedAccount.cpp  UntrustedAccount.hpp
source/banks_lib/bank_system/: AccountConditions.hpp  Bank.cpp  Bank.hpp  BankUser.cpp  BankUser.hpp  PaymentSystem.cpp  PaymentSystem.hpp
source/banks_lib/logger/: ConsoleLogger.cpp  ConsoleLogger.hpp  ILogger.hpp
source/banks_lib/operations/: OperationHistory.cpp  OperationHistory.hpp  Operations.hpp
source/banks_lib/types/: types.hpp  utils.cpp  utils.hpp
source/banks_lib/users/: Bot.cpp  Bot.hpp  IUser.hpp  TelegramUser.cpp  TelegramUser.hpp
source/banks_lib/world/: Bot.cpp  Bot.hpp  ITimeService.hpp  IUser.hpp  IWorld.cpp  IWorld.hpp  ManualTimeService.hpp  Simulation.cpp  Simulation.hpp  TelegramUser.cpp  TelegramUser.hpp  UserInfo.hpp  World.cpp  World.hpp  WorldFactory.cpp  WorldFactory.hpp
